--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/tokenImage.ico" />
+    <link rel="icon" type="image/svg+xml" href="https://amber-genuine-frog-385.mypinata.cloud/ipfs/QmdnttUULgb2rRFgsPeChyQ1WDVg5kue4Fwy3RUCPvKUpt/tokenImage.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
