--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://amber-genuine-frog-385.mypinata.cloud/ipfs/QmdnttUULgb2rRFgsPeChyQ1WDVg5kue4Fwy3RUCPvKUpt/tokenImage.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>ANALOG</title>
   </head>
   <body>
     <div id="root"></div>
